# BetterReadME

./: .gitattributes  CMakeLists.txt  README.md  README_de.md  README_en.md  README_fr.md  changeDir.cpp  changeDir.h  create.cpp  create.h  languages.h  main.cpp
